# diffski

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deployer.yml
frontend/: compiled-styles.css  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
src/: lib.rs
