[package]
name = "rust-wasm-start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
wasm-bindgen = "0.2.82"
similar = "2.2.0"